--- a/keepnote/Vim/airties specific/commands 2/commands/page.html
+++ b/keepnote/Vim/airties specific/commands 2/commands/page.html
@@ -16,11 +16,6 @@
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------- </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
-<br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">--------------------------------------------------------------------------------------- </span></span><br/>
-</div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">ifconfig br0 192.168.2.100 </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">ifconfig br0 192.168.2.101 </span></span><br/>
@@ -62,7 +57,7 @@
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
+</div><div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">LİNUX UPDATE İÇİN </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
@@ -74,15 +69,9 @@
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">sudo apt-get update </span></span><br/>
-</div><br/>
+</div><div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-<br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">cat /proc/loadavg </span></span><br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">cat /proc/loadavg </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">mpstat -P 0 </span></span><br/>
 </div><br/>
@@ -93,50 +82,40 @@
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">mpstat -P 3 </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
+</div><div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">iperf -c 224.0.22.2 -u -b20M -S 0x88 -t999999 -i 1 </span></span><br/>
 <span style="font-family: Calibri"><span style="font-size: 11pt">iperf -s -u -B 224.0.22.2 -i 1 </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt"> ------------------------------------------------------------------------------------------------------------------  </span></span><br/>
 <span style="font-family: Calibri"><span style="font-size: 11pt">dhcp açma kapama </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">sudo /etc/init.d/isc-dhcp-server restart </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">sudo /etc/init.d/isc-dhcp-server stop </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------   </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">cat /proc/air_mesh_rt  </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  ------------------------------------------------------------------------------------------------------------------ </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">sudo ip link set mtu 1480 eth0 </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  ------------------------------------------------------------------------------------------------------------------ </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">4920 ap mode alma </span></span><br/>
-</div><br/>
+</div><div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
 <br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">fwrecover -d eth0 -f AirTies_RT-206v1TT_FW_1.1.5.bin </span></span><br/>
 </div><br/>
-<div style="text-align: left"><br/>
-<br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span><br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">cat /proc/version  : fw version kontrol </span></span><br/>
+<span style="font-size: 11pt"><span style="font-family: Calibri">cat /etc/buildversion: buildversion control </span></span><br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">cat /data/nvram.txt : mac, ssid, şifre tipi, şifreler </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">cat /proc/version  : fw version kontrol </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">cat /etc/buildversion: buildversion control </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">cat /data/nvram.txt : mac, ssid, şifre tipi, şifreler </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  ------------------------------------------------------------------------------------------------------------------ </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">4920 için </span></span><br/>
 </div><br/>
@@ -146,12 +125,12 @@
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">reboot </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------   </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">Sky ve Falcon için </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">echo REPEATER_SSID_SUFFIX=_UR11 &gt;&gt; /data/nvram.txt </span></span><br/>
-</div><br/>
+</div><div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
@@ -184,9 +163,9 @@
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">fakenvram /data/nvram.txt set WLAN_KEY_1 managers </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt"> ------------------------------------------------------------------------------------------------------------------  </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">19:3d:f5:8b:2e:12 </span></span><br/>
+<div style="text-align: left"><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
 <br/>
@@ -197,7 +176,7 @@
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">=============================== </span></span><br/>
+<div style="text-align: left"><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt"> </span></span><br/>
 </div></body></html>
