--- a/keepnote/Vim/airties specific/commands 2/commands/page.html
+++ b/keepnote/Vim/airties specific/commands 2/commands/page.html
@@ -3,12 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Commands</title>
-</head><body><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">Manager and wireless commands </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">ssh <a href="mailto:dvt@10.20.1.88">dvt@10.20.1.88</a> </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+</head><body><span style="font-size: 18pt">Misc Commands:</span><div style="text-align: left"><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------- </span></span><br/>
 </div><br/>
@@ -33,30 +28,24 @@
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">Falcon ve MRBox'ta iptables kurallarini silme </span></span><br/>
 </div><div style="text-align: left"><span style="font-size: 11pt"><span style="font-family: Calibri">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">iptables --flush </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span><br/>
+<span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">WIRESHARK </span></span><br/>
 </div><div style="text-align: left"><span style="font-size: 11pt"><span style="font-family: Calibri">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">wlan.addr==MAC ADRESS </span></span><br/>
 </div><div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
+<br/>
 <br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">eth interface değiştirmek için :  </span></span><br/>
 </div><div style="text-align: left"><span style="font-size: 11pt"><span style="font-family: Calibri">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">sudo gedit /etc/network/interfaces </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
+<span style="font-size: 11pt"><span style="font-family: Calibri"><br/>
+</span></span><br/>
 </div><div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">LİNUX UPDATE İÇİN </span></span><br/>
 </div><br/>
@@ -99,11 +88,11 @@
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">cat /proc/air_mesh_rt  </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  ------------------------------------------------------------------------------------------------------------------ </span></span><br/>
+<div style="text-align: left"><span style="font-size: 11pt"><span style="font-family: Calibri">------------------------------------------------------------------------------------------------------------------ </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">sudo ip link set mtu 1480 eth0 </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  ------------------------------------------------------------------------------------------------------------------ </span></span><br/>
+<br/>
+<span style="font-size: 11pt"><span style="font-family: Calibri">------------------------------------------------------------------------------------------------------------------ </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">4920 ap mode alma </span></span><br/>
 </div><div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
@@ -115,7 +104,7 @@
 <span style="font-size: 11pt"><span style="font-family: Calibri">cat /etc/buildversion: buildversion control </span></span><br/>
 <span style="font-family: Calibri"><span style="font-size: 11pt">cat /data/nvram.txt : mac, ssid, şifre tipi, şifreler </span></span><br/>
 </div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  ------------------------------------------------------------------------------------------------------------------ </span></span><br/>
+<div style="text-align: left"><span style="font-size: 11pt"><span style="font-family: Calibri">------------------------------------------------------------------------------------------------------------------ </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">4920 için </span></span><br/>
 </div><br/>
@@ -131,10 +120,7 @@
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">echo REPEATER_SSID_SUFFIX=_UR11 &gt;&gt; /data/nvram.txt </span></span><br/>
 </div><div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">------------------------------------------------------------------------------------------------------------------ </span></span></div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
-<div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">  </span></span><br/>
-</div><br/>
+<br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">fakenvram /data/nvram.txt set MAC_ETH_0 78:3E:53:FF:58:F0 </span></span><br/>
 </div><br/>
 <div style="text-align: left"><span style="font-family: Calibri"><span style="font-size: 11pt">fakenvram /data/nvram.txt set MAC_WLAN_0 78:3E:53:FF:58:F1 </span></span><br/>
