--- a/keepnote/Vim/airties specific/cloud-devel/release integration/page.html
+++ b/keepnote/Vim/airties specific/cloud-devel/release integration/page.html
@@ -6,9 +6,35 @@
 </head><body>Cloud ve Steering ana branch'a geçirilecek<br/>
 <br/>
 <br/>
-TODOs:<br/>
+<b>TODOs:</b><br/>
 --------------------------------------------------------------------------------------------------------------------------<br/>
-Cloud<br/>
+--------------------------------------------------------------------------------------------------------------------------<br/>
+<b><br/>
+General:<br/>
+</b>--------------------------------------------------------------------------------------------------------------------------<br/>
+- Buildsys'in hazırlanması<br/>
+- Json ve libstrophe patchleri<br/>
+-<br/>
 <br/>
 <br/>
-Steering</body></html>
+--------------------------------------------------------------------------------------------------------------------------<b><br/>
+</b><b><br/>
+<br/>
+</b><b>Cloud</b><br/>
+--------------------------------------------------------------------------------------------------------------------------<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+--------------------------------------------------------------------------------------------------------------------------<br/>
+<br/>
+<br/>
+<b><br/>
+<br/>
+<br/>
+</b><b>Steering</b><br/>
+--------------------------------------------------------------------------------------------------------------------------<br/>
+<br/>
+<br/>
+<br/>
+--------------------------------------------------------------------------------------------------------------------------</body></html>
