--- a/keepnote/Vim/airties specific/cloud-devel/release integration/page.html
+++ b/keepnote/Vim/airties specific/cloud-devel/release integration/page.html
@@ -14,7 +14,9 @@ General:<br/>
 </b>--------------------------------------------------------------------------------------------------------------------------<br/>
 - Buildsys'in hazırlanması<br/>
 - Json ve libstrophe patchleri<br/>
--<br/>
+- modullerin çalışma sırası<br/>
+- homecomm ve STB gibi isimlerin girilmesi<br/>
+- Packet dependecylerinin paketlere girilmesi, compile edebilmek<br/>
 <br/>
 <br/>
 --------------------------------------------------------------------------------------------------------------------------<b><br/>
