--- a/keepnote/Vim/airties specific/cloud-devel/release integration/page.html
+++ b/keepnote/Vim/airties specific/cloud-devel/release integration/page.html
@@ -16,7 +16,8 @@ General:<br/>
 - Json ve libstrophe patchleri<br/>
 - modullerin çalışma sırası<br/>
 - homecomm ve STB gibi isimlerin girilmesi<br/>
-- Packet dependecylerinin paketlere girilmesi, compile edebilmek<br/>
+- Packet config dependecylerinin paket ana Makefile'larına girilmesi, compile edebilmek için<br/>
+- <br/>
 <br/>
 <br/>
 --------------------------------------------------------------------------------------------------------------------------<b><br/>
